--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "some-really-long-text"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +10,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings" : {
-    "DataContextDb":"Data Source = DESKTOP-GC85L0C; Initial Catalog = DataContextDb; Integrated Security = true;"
+  "ConnectionStrings": {
+    "DataContextDb": "Data Source = DESKTOP-GC85L0C; Initial Catalog = DataContextDb; Integrated Security = true;"
   }
 }
