adding Alertify & auth0/angular-jwt

--- a/fontend/tsconfig.app.json
+++ b/fontend/tsconfig.app.json
@@ -3,11 +3,13 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [
+    ]
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "src/typings.d.ts"
   ],
   "include": [
     "src/**/*.d.ts"
