--- a/fontend/package.json
+++ b/fontend/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@auth0/angular-jwt": "^5.0.1",
+    "@types/alertify": "^0.3.30",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.5.5",
